--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-01  Jost Boekemeier <jostb@intern>
+
+	* bind.c (java_get_server_args): Fixed typo, the displayed info
+	was incorrect.
+	
 2005-04-30  Jost Boekemeier <jostb@intern>
 	
 	* ABOUT.HTM: New file.
