--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-05-01  Jost Boekemeier <jostb@intern>
 
+	* server/php/java/bridge/JavaBridge.java (getInstance): Store
+	args.
+
+	* server/php/java/bridge/JavaBridge.java (findMatchingInterface):
+	Search superclasses.
+	
 	* bind.c (java_get_server_args): Fixed typo, the displayed info
 	was incorrect.
 	
